--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Rune House</title>
+
+  <meta property="og:title" content="Rune House">
+  <meta property="og:description" content="The E-Commerce page.">
+  <meta property="og:image" content="./opg.png">
+  <meta property="og:url" content="https://hnanhphatecommerce.netlify.app/">
 </head>
 
 <body>
