--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 
   <meta property="og:title" content="Rune House">
   <meta property="og:description" content="The E-Commerce page.">
-  <meta property="og:image" content="./opg.png">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/hnanhphat/image/upload/v1622016195/e-commerce/opg_fzsjxw.png">
   <meta property="og:url" content="https://hnanhphatecommerce.netlify.app/">
 </head>
 
